# CED_kv

./: .gitignore  README.md  pyproject.toml
cedkv_mvp/: __init__.py
configs/: base.yaml
docs/: ced_kv_execution_plan.md  phase0_plan.md  phase15_plan.md  phase1_plan.md  phase2_debug_flow.md  phase2_plan_v2.md  phase3_change_log.md  phase3_plan_v3.md  phase3_step3_pre_execution_plan.md  phase3_todo_plan.md
src/cedkv_mvp/: __init__.py  cli.py  config.py  eval_phase0.py  eval_phase1.py  eval_phase2.py  eval_phase3.py  kv_capture.py  kv_inject.py  metrics.py  metrics_phase0.py  model_hf.py  predictors_phase0.py  report.py  runtime.py  select_kv_phase1.py  synthetic.py
tests/: __init__.py  test_smoke.py
tests/phase0/: __init__.py  test_metrics_record_type.py  test_off_delta_union_other.py  test_phase0_gate_fail.py  test_phase0_modes.py
tests/phase1/: __init__.py  test_gateA_nonzero_effect.py  test_gateA_null_effect.py  test_gateA_roundtrip_relative_kl.py  test_gateA_teacher_sanity.py  test_gateB_span_selection_advisory.py
tests/phase15/: __init__.py  test_phase15_hf_smoke_optin.py  test_phase15_strict_fail_no_fallback.py
tests/phase2/: __init__.py  test_candidate_policy_center_restriction.py  test_prefix_padding_null_pad.py  test_random_trials_mean_comparison.py  test_rel_kl_to_teacher_gate.py
tests/phase3/: test_phase3_constraint_warn_artifact_write.py  test_phase3_constraint_warn_eval_tick_semantics.py  test_phase3_constraint_warn_metric_contract.py  test_phase3_cvar_tail_fraction_semantics.py  test_phase3_delimiter_apply_stage_post_topk.py  (+16 more)
